Fix enlarged first letter on firefox

--- a/src/styles/all.sass
+++ b/src/styles/all.sass
@@ -89,13 +89,6 @@ $first-letter-f-multiplier: 6
     &:hover
       color: $link
 
-    &::first-letter
-      font-size: $f-size * $first-letter-f-multiplier
-      line-height: 0.8
-      margin-bottom: 6rem
-      float: left
-      font-weight: normal
-
     h2
       margin-bottom: 0.2em
       font-weight: $weight-bold
@@ -104,6 +97,14 @@ $first-letter-f-multiplier: 6
     p
       font-size: 1rem
       font-family: $family-sans-serif
+
+.post-meta
+  &::first-letter
+    font-size: $f-size * $first-letter-f-multiplier
+    line-height: 0.8
+    margin-bottom: 6rem
+    float: left
+    font-weight: normal
 
 main
   a
